--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,24 @@
-.App {
-  text-align: center;
+.app {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #202124;
+  color: white;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
+ .containerSB{
+  padding: 15%;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-width: 200px;
+  background-image: linear-gradient(#202124, #AAD52A 250%);
+  position: absolute; top: 0; left: 0; height: 100%; width: 100%;
+ }
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: #eee;
+  min-height: 10vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -23,16 +26,55 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
+.input-wrapper{
+  background-color: white;
+  width:100%;
+  border-radius:10px;
+  height: 2.5rem;
+  padding: 0 15px;
+  box-shadow: 0px 0px 8px #ddd;
+  display: flex;
+  align-items: center;
+}
+.plaintext{
+  color: white;
 
-.App-link {
-  color: #61dafb;
+}
+.bottomImage{
+  position: relative;
+  top: 450px;
+  left:90%;
+}
+h1 {
+font-size: 50px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+table{
+  position:relative;
+}
+h2{
+  padding-bottom: 5px;
+}
+#bloco{
+  padding-right: 15px; 
+}
+li{
+  margin-bottom: 5px;
+}
+ul{
+  list-style-type: none;
+  border: 1px solid white;
+  border-radius: 10px;
+  padding: 5px;
+  background-color: #585f44;
+}
+#gatewaynome{
+  padding: 0px 25px;
+}
+.listadevices{
+  border: 1px solid white;
+}
+a{
+  color: rgb(59, 59, 59);
+  font-weight: bold;
 }
